Fix CSS mobile alignfull

--- a/wp-content/themes/cpipr/less/style.less
+++ b/wp-content/themes/cpipr/less/style.less
@@ -952,6 +952,13 @@ body.normal.single-post .entry-content {
   body.normal.single-post .entry-content {
     padding: 0;
   }
+  .wp-caption.alignfull .wp-caption-img-wrap {
+    margin-bottom: 10px;
+  }
+  .wp-caption.alignfull .wp-media-credit,
+  .wp-caption.alignfull .wp-caption-text {
+    padding: 0 20px;
+  }
 }
 
 /* Navis slideshow */
